--- a/FrontEND/Page/Style/Style.css
+++ b/FrontEND/Page/Style/Style.css
@@ -1,387 +1,362 @@
-*{
+* {
     box-sizing: border-box;
     scroll-behavior: smooth;
+    font-family: "Roboto", sans-serif;
 }
 
-body{
+body {
     font-family: sans-serif;
     box-sizing: border-box;
     --principal-color: #0b8dea;
     --clarito-color: #b2d0e6;
-    height: 200dvh;
+    height: 100dvh;
+    background-image: linear-gradient(90deg, white, rgb(186, 236, 241));
 }
 
-div, ul, nav, header, footer, a, li, label, body{
+div,
+ul,
+nav,
+header,
+footer,
+a,
+li,
+label,
+body {
     margin: 0;
     padding: 0;
 }
 
+main {
+    min-height: calc(100% - 120px - 110px);
+}
+
+
 /*hacer la pagina responsive*/
 
-@media (min-width: 820px) { /*EN CASO DE QUE LA PANTALLA SEA MAYOR A 980PX SE APLICA ESTO*/
-
-    
+@media (min-width: 820px) {
+    /*EN CASO DE QUE LA PANTALLA SEA MAYOR A 980PX SE APLICA ESTO*/
     /* ---------- HEADER --------- */
-    
-    
-        .header{
-            background-color: var(--clarito-color);
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            container-type: inline-size;
-            container-name: header;
-            z-index: 10;
-            position: relative;
-            text-align: center;
-            font-size: 20px;
-            border-bottom: 1px solid var(--principal-color);
-            max-height: 110px;
-        }
-        
-        
-        .iconmenu-header{
-            width: 40px;
-            margin-top: 10px;
-        }
-        
-        .header__nav-list{
-            display: flex;
-            flex-direction: row;
-            height: auto;
-            margin: auto;
-            justify-content: space-evenly;
-            gap: 20px;
-            margin-right: 40px;
-        }
-        .header__logo{
-            width: 150px;
-            margin-left: 30px;
-            margin-right: 35px;
-            position: relative;
-            height: 100px;
-        }
-        .carrito-container{
-            border-radius: 50%;
-        }
-        .carrito-container:hover{
-            opacity: .7;
-        }
-        .imagen-carrito{
-            width: 110px;
-            position: relative;
-            height: 60px;
-            cursor: pointer;
-        }
-        .header__nav-item{
-            width: 100px;
-            list-style: none;
-            font-size: 24px;
-            color: var(--principal-color);
-            margin-left: 5px;
-            letter-spacing: 1.5px;
-            display: flex;
-            align-items: center;
-            padding-right: 6px;
-            border-radius: 36px 0 0 36px;
-            position: relative;
-        }
-        .header__nav-item2{
-            margin-right: 25px;
-        }
-        .flecha-nav{
-            color: #000;
-            user-select: none;
-        }
-        
-        .header__nav-item a{
-            text-decoration: none;
-            color: #000;
-        }
-        
-        .header__nav-item a:hover{
-            opacity: 0.7;
-        }
-        .logo_header{
-            user-select: none;    /*cambiar */
-        }
-        .header__open-nav-button{
-            display: none;
-        }
-        
-        .header__item-container{
-            position: relative;
-            z-index: 10; 
-            margin: auto;
-            margin-top: 120px;
-            text-align: center;
-            max-width: 700px;
-            z-index: 1;
-        
-        }
-        
-        .login{
-            list-style: none;
-            display: flex;
-        }
-        
-        .login a{
-            text-decoration: none;
-            color: #000;
-        }
-        
-        .login:hover{
-            opacity: .7;
-        }
-        .login2{
-            background-color: var(--principal-color);
-            font-size: 24px;
-            letter-spacing: 1.5px;
-            display: flex;
-            align-items: center;
-            padding: 40px;
-            margin-right: 20px;
-            margin-left: 40px;
-            width: 160px;
-            max-height: 10px;
-            border-radius: 90px;
-        }
-        /*CATEGORIAS DE LOS PRODUCTOS*/
-        .productos-navbar{
-            display: flex;
-            align-items: center;
-            padding-bottom: 20px;
-            padding-top: 20px;
-        }
-        .menu {
-            width: 300px;
-            justify-content: center;
-            margin: auto;
-            align-items: center;
-        }
-          
-        .menu ul{
-            list-style-type: none;
-            padding: 0;
-        }
-          
-        .menu ul ul {
-            display: none;
-        }
-          
-        .menu ul li {
-            position: relative;
-        }
-          
-        .menu ul li a {
-            display: block;
-            color: #333;
-        }
-          
-        .menu ul li:hover > ul {
-            display: block;
-            position: absolute;
-            background-color: var(--clarito-color);
-            border: 2px solid var(--principal-color);
-            border-radius: 5px;
-          }
-          
-        .menu ul ul li {
-            width: 100%;
-          }
-          
-        .menu ul ul li a {
-            padding: 8px 15px;
-          }
-          
-        .menu ul ul ul {
-            left: 100%;
-            top: 0;
-          }
-          
+    .header {
+        background-color: var(--clarito-color);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        container-type: inline-size;
+        container-name: header;
+        z-index: 10;
+        position: relative;
+        text-align: center;
+        font-size: 20px;
+        border-bottom: 1px solid var(--principal-color);
+        height: 110px;
     }
-    
-    
-    /*EN CASO DE QUE LA PANTALLA SEA MENOR A 820PX SE APLICA ESTO*/
-    
-    
-    @media (max-width: 820px) { 
-    
-        
-        /* ---------- HEADER --------- */
-        
-        
-            .header{
-                background-color: var(--clarito-color);
-                display: flex;
-                align-items: center;
-                container-type: inline-size;
-                container-name: header;
-                position: relative;
-                z-index: 10;
-                text-align: center;
-                font-size: 20px;
-                border-bottom: 1px solid var(--principal-color);
-                max-height: 110px;
-            }
-            
-            
-            .iconmenu-header{
-                width: 40px;
-                margin-top: 10px;
-            }
-            .header__nav{
-                width: 100%;
-            }
-            .header__nav-list{
-                display: flex;
-                flex-direction: row;
-                height: auto;
-                margin: auto;
-                justify-content: space-evenly;
-                gap: 20px;
-            }
-            .header__logo{
-                display: none;
-            }
-            .carrito-container{
-                border-radius: 50%;
-                display: flex;
-                align-items: center;
-            }
-            .carrito-container:hover{
-                opacity: .7;
-            }
-            .imagen-carrito{
-                width: 70px;
-                position: relative;
-                height: 40px;
-                cursor: pointer;
-            }
-            
-            .header__nav-item{
-                width: 100px;
-                list-style: none;
-                font-size: 19px;
-                margin-left: 15px;
-                color: var(--principal-color);
-                display: flex;
-                align-items: center;
-                border-radius: 36px 0 0 36px;
-                position: relative;
-            }
-            .flecha-nav{
-                color: #000;
-                user-select: none;
-            }
-            
-            .header__nav-item a{
-                text-decoration: none;
-                color: #000;
-            }
-            
-            .header__nav-item a:hover{
-                opacity: 0.7;
-            }
-            .logo_header{
-                user-select: none;    /*cambiar */
-            }
-            .header__open-nav-button{
-                display: none;
-            }
-            
-            .header__item-container{
-                position: relative;
-                z-index: 10; 
-                margin: auto;
-                margin-top: 120px;
-                text-align: center;
-                max-width: 700px;
-                z-index: 1;
-            
-            }
-            
-            .login{
-                list-style: none;
-                display: flex;
-            }
-            
-            .login a{
-                text-decoration: none;
-                color: #000;
-            }
-            
-            .login:hover{
-                opacity: .7;
-            }
-            .login2{
-                background-color: var(--principal-color);
-                font-size: 18px;
-                display: flex;
-                align-items: center;
-                padding: 15px 23px;
-                width: 100px;
-                margin: 10px 0;
-                border-radius: 90px;
-            }
-            /*CATEGORIAS DE LOS PRODUCTOS*/
-            .productos-navbar{
-                display: flex;
-                align-items: center;
-                padding-bottom: 20px;
-                padding-top: 20px;
-            }
-            .menu {
-                width: 100px;
-                justify-content: center;
-                margin: auto;
-                align-items: center;
-            }
-              
-            .menu ul{
-                list-style-type: none;
-                padding: 0;
-            }
-              
-            .menu ul ul {
-                display: none;
-            }
-              
-            .menu ul li {
-                position: relative;
-            }
-              
-            .menu ul li a {
-                display: block;
-                color: #333;
-            }
-              
-            .menu ul li:hover > ul {
-                display: block;
-                position: absolute;
-                background-color: var(--clarito-color);
-                border: 2px solid var(--principal-color);
-                border-radius: 5px;
-              }
-              
-            .menu ul ul li {
-                width: 100%;
-              }
-              
-            .menu ul ul li a {
-                padding: 8px 15px;
-              }
-              
-            .menu ul ul ul {
-                left: 100%;
-                top: 0;
-              }    
-        }
+    .iconmenu-header {
+        width: 40px;
+        margin-top: 10px;
+    }
+    .header__nav-list {
+        display: flex;
+        flex-direction: row;
+        height: auto;
+        margin: auto;
+        justify-content: space-evenly;
+        gap: 20px;
+        margin-right: 40px;
+    }
+    .header__logo {
+        width: 150px;
+        margin-left: 30px;
+        margin-right: 35px;
+        position: relative;
+        height: 100px;
+    }
+    .carrito-container {
+        border-radius: 50%;
+    }
+    .carrito-container:hover {
+        opacity: .7;
+    }
+    .imagen-carrito {
+        width: 110px;
+        position: relative;
+        height: 60px;
+        cursor: pointer;
+    }
+    .header__nav-item {
+        width: 100px;
+        list-style: none;
+        font-size: 24px;
+        color: var(--principal-color);
+        margin-left: 5px;
+        letter-spacing: 1.5px;
+        display: flex;
+        align-items: center;
+        padding-right: 6px;
+        border-radius: 36px 0 0 36px;
+        position: relative;
+    }
+    .header__nav-item2 {
+        margin-right: 25px;
+    }
+    .flecha-nav {
+        color: #000;
+        user-select: none;
+    }
+    .header__nav-item a {
+        text-decoration: none;
+        color: #000;
+    }
+    .header__nav-item a:hover {
+        opacity: 0.7;
+    }
+    .logo_header {
+        user-select: none;
+        /*cambiar */
+    }
+    .header__open-nav-button {
+        display: none;
+    }
+    .header__item-container {
+        position: relative;
+        z-index: 10;
+        margin: auto;
+        margin-top: 120px;
+        text-align: center;
+        max-width: 700px;
+        z-index: 1;
+    }
+    .login {
+        list-style: none;
+        display: flex;
+    }
+    .login a {
+        text-decoration: none;
+        color: #000;
+    }
+    .login:hover {
+        opacity: .7;
+    }
+    .login2 {
+        background-color: var(--principal-color);
+        font-size: 24px;
+        letter-spacing: 1.5px;
+        display: flex;
+        align-items: center;
+        padding: 40px;
+        margin-right: 20px;
+        margin-left: 40px;
+        width: 160px;
+        max-height: 10px;
+        border-radius: 90px;
+    }
+    /*CATEGORIAS DE LOS PRODUCTOS*/
+    .productos-navbar {
+        display: flex;
+        align-items: center;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+    .menu {
+        width: 300px;
+        justify-content: center;
+        margin: auto;
+        align-items: center;
+    }
+    .menu ul {
+        list-style-type: none;
+        padding: 0;
+    }
+    .menu ul ul {
+        display: none;
+    }
+    .menu ul li {
+        position: relative;
+    }
+    .menu ul li a {
+        display: block;
+        color: #333;
+    }
+    .menu ul li:hover>ul {
+        display: block;
+        position: absolute;
+        background-color: var(--clarito-color);
+        border: 2px solid var(--principal-color);
+        border-radius: 5px;
+    }
+    .menu ul ul li {
+        width: 100%;
+    }
+    .menu ul ul li a {
+        padding: 8px 15px;
+    }
+    .menu ul ul ul {
+        left: 100%;
+        top: 0;
+    }
+}
+
+
+/*EN CASO DE QUE LA PANTALLA SEA MENOR A 820PX SE APLICA ESTO*/
+
+@media (max-width: 820px) {
+    /* ---------- HEADER --------- */
+    .header {
+        background-color: var(--clarito-color);
+        display: flex;
+        align-items: center;
+        container-type: inline-size;
+        container-name: header;
+        position: relative;
+        z-index: 10;
+        text-align: center;
+        font-size: 20px;
+        border-bottom: 1px solid var(--principal-color);
+        height: 80px;
+    }
+    .iconmenu-header {
+        width: 40px;
+        margin-top: 10px;
+    }
+    .header__nav {
+        width: 100%;
+    }
+    .header__nav-list {
+        display: flex;
+        flex-direction: row;
+        height: auto;
+        margin: auto;
+        justify-content: space-evenly;
+        gap: 20px;
+    }
+    .header__logo {
+        display: none;
+    }
+    .carrito-container {
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+    }
+    .carrito-container:hover {
+        opacity: .7;
+    }
+    .imagen-carrito {
+        width: 70px;
+        position: relative;
+        height: 40px;
+        cursor: pointer;
+    }
+    .header__nav-item {
+        width: 100px;
+        list-style: none;
+        font-size: 19px;
+        margin-left: 15px;
+        color: var(--principal-color);
+        display: flex;
+        align-items: center;
+        border-radius: 36px 0 0 36px;
+        position: relative;
+    }
+    .flecha-nav {
+        color: #000;
+        user-select: none;
+    }
+    .header__nav-item a {
+        text-decoration: none;
+        color: #000;
+    }
+    .header__nav-item a:hover {
+        opacity: 0.7;
+    }
+    .logo_header {
+        user-select: none;
+        /*cambiar */
+    }
+    .header__open-nav-button {
+        display: none;
+    }
+    .header__item-container {
+        position: relative;
+        z-index: 10;
+        margin: auto;
+        margin-top: 120px;
+        text-align: center;
+        max-width: 700px;
+        z-index: 1;
+    }
+    .login {
+        list-style: none;
+        display: flex;
+    }
+    .login a {
+        text-decoration: none;
+        color: #000;
+    }
+    .login:hover {
+        opacity: .7;
+    }
+    .login2 {
+        background-color: var(--principal-color);
+        font-size: 18px;
+        display: flex;
+        align-items: center;
+        padding: 15px 23px;
+        width: 100px;
+        margin: 10px 0;
+        border-radius: 90px;
+    }
+    /*CATEGORIAS DE LOS PRODUCTOS*/
+    .productos-navbar {
+        display: flex;
+        align-items: center;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+    .menu {
+        width: 100px;
+        justify-content: center;
+        margin: auto;
+        align-items: center;
+    }
+    .menu ul {
+        list-style-type: none;
+        padding: 0;
+    }
+    .menu ul ul {
+        display: none;
+    }
+    .menu ul li {
+        position: relative;
+    }
+    .menu ul li a {
+        display: block;
+        color: #333;
+    }
+    .menu ul li:hover>ul {
+        display: block;
+        position: absolute;
+        background-color: var(--clarito-color);
+        border: 2px solid var(--principal-color);
+        border-radius: 5px;
+    }
+    .menu ul ul li {
+        width: 100%;
+    }
+    .menu ul ul li a {
+        padding: 8px 15px;
+    }
+    .menu ul ul ul {
+        left: 100%;
+        top: 0;
+    }
+    main {
+        min-height: calc(100% - 120px - 80px);
+    }
+}
 
 
 /*FORM LOGIN*/
 
-.div-container{
+.div-container {
     max-width: 750px;
     background-color: var(--clarito-color);
     height: 600px;
@@ -394,21 +369,22 @@ div, ul, nav, header, footer, a, li, label, body{
     border-radius: 30px;
 }
 
-
-.form-container{
+.form-container {
     background-color: var(--principal-color);
     height: 600px;
     width: 50%;
     align-items: end;
     border-radius: 30px 0 0 30px;
 }
-.formulario-container{
+
+.formulario-container {
     border-radius: 30px 0 0 0;
     display: flex;
     flex-direction: column;
     height: 600px;
 }
-h1{
+
+h1 {
     font-family: sans-serif;
     font-size: 2.9rem;
     margin: 0 auto;
@@ -416,21 +392,25 @@ h1{
     justify-content: center;
     text-align: center;
 }
-.prueba2{
+
+.prueba2 {
     display: flex;
     flex-direction: column;
 }
-.prueba{
+
+.prueba {
     margin: 30px 0;
     border-top: 1px solid var(--clarito-color);
 }
-.form_input{
+
+.form_input {
     margin: 0px 24px;
 }
 
+
 /*IMG DEL LOGO FORMULARIO*/
 
-.img-div-form{ 
+.img-div-form {
     max-width: 315px;
     position: absolute;
     right: 0;
@@ -438,15 +418,16 @@ h1{
     margin: 180px 35px;
 }
 
+
 /* BOTON DEL FORMULARIO */
 
-.button-container{
-    
+.button-container {
     justify-content: center;
     align-items: center;
     display: flex;
 }
-button{
+
+button {
     margin-top: 15px;
     background-color: var(--clarito-color);
     width: 150px;
@@ -455,37 +436,45 @@ button{
     text-align: center;
     box-shadow: 0 0 10px;
 }
-button:hover{
+
+button:hover {
     opacity: .6;
 }
 
+
 /*casillas de USUARIO, EMAIL, CONTRASEÑA*/
 
-h2{
+h2 {
     font-size: 1.2rem;
 }
-label{
+
+label {
     margin-left: 8px;
     margin-bottom: 4px;
     font-size: 1rem;
 }
-input{
+
+input {
     padding: 9px;
     border-radius: 15px;
-    box-shadow: 0 0 9px ;
+    box-shadow: 0 0 9px;
 }
+
 
 /*PARRAFO DE ABAJO FORMULARIO */
 
-.parrafo-container{
+.parrafo-container {
     margin-top: 40px;
     text-align: center;
     font-size: 1.1rem;
 }
-.parrafo-container a{
+
+.parrafo-container a {
     color: white;
     text-decoration: underline;
 }
+
+
 /*FOOTER */
 
 footer {
@@ -496,7 +485,8 @@ footer {
     z-index: 2;
     display: flex;
 }
-.footer-general{
+
+.footer-general {
     margin: auto;
     color: var(--principal-color);
 }
