--- a/FrontEND/Page/Register/register.css
+++ b/FrontEND/Page/Register/register.css
@@ -151,6 +151,7 @@ main {
         width: 160px;
         max-height: 10px;
         border-radius: 90px;
+        box-shadow: 0 0 10px black;
     }
     /*CATEGORIAS DE LOS PRODUCTOS*/
     .productos-navbar {
@@ -361,8 +362,7 @@ main {
 
 
 /*FORM LOGIN*/
-
-.div-container {
+.div-container{
     max-width: 770px;
     background-color: var(--clarito-color);
     display: flex;
@@ -371,6 +371,9 @@ main {
     box-shadow: 0 0 15px black;
     border: 2px solid rgb(4, 26, 53);
     min-height: 730px;
+}
+.container {
+    display: flex;
 }
 .todo-formulario{
     width: 50%;
@@ -392,7 +395,7 @@ main {
 
 h1 {
     font-family: sans-serif;
-    font-size: 2.9rem;
+    font-size: 2rem;
     margin: 50px 0 0 0;
     justify-content: center;
     text-align: center;
@@ -420,13 +423,15 @@ h1 {
 .todo-img{
     width: 50%;
     display: flex;
+    background-image: radial-gradient(white, rgb(157, 195, 254));
+    border-radius: 0 30px 30px 0;
 }
 .img-div-form {
-    max-width: 315px;
-    max-height: 200px;
+    width: 100%;
     justify-content: center;
     align-items: center;
     margin: auto;
+    user-select: none;
 }
 
 
