--- a/FrontEND/Page/Administrador/Agregar.css
+++ b/FrontEND/Page/Administrador/Agregar.css
@@ -1,9 +1,9 @@
-*{
+* {
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
 
-body{
+body {
     font-family: sans-serif;
     box-sizing: border-box;
     --principal-color: #0b8dea;
@@ -11,382 +11,350 @@ body{
     height: 200dvh;
 }
 
-div, ul, nav, header, footer, a, li, label, body{
+div,
+ul,
+nav,
+header,
+footer,
+a,
+li,
+label,
+body {
     margin: 0;
     padding: 0;
 }
 
+
 /*hacer la pagina responsive*/
 
-@media (min-width: 820px) { /*EN CASO DE QUE LA PANTALLA SEA MAYOR A 980PX SE APLICA ESTO*/
-
-    
+@media (min-width: 820px) {
+    /*EN CASO DE QUE LA PANTALLA SEA MAYOR A 980PX SE APLICA ESTO*/
     /* ---------- HEADER --------- */
-    
-    
-        .header{
-            background-color: var(--clarito-color);
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            container-type: inline-size;
-            container-name: header;
-            z-index: 10;
-            position: relative;
-            text-align: center;
-            font-size: 20px;
-            border-bottom: 1px solid var(--principal-color);
-            max-height: 110px;
-            user-select: none;
-        }
-        
-        
-        .iconmenu-header{
-            width: 40px;
-            margin-top: 10px;
-        }
-        
-        .header__nav-list{
-            display: flex;
-            flex-direction: row;
-            height: auto;
-            margin: auto;
-            justify-content: space-evenly;
-            gap: 20px;
-            margin-right: 40px;
-        }
-        .header__logo{
-            width: 150px;
-            margin-left: 30px;
-            margin-right: 35px;
-            position: relative;
-            height: 100px;
-        }
-        .carrito-container{
-            border-radius: 50%;
-        }
-        .carrito-container:hover{
-            opacity: .7;
-        }
-        .imagen-carrito{
-            width: 110px;
-            position: relative;
-            height: 60px;
-            cursor: pointer;
-        }
-        .header__nav-item{
-            width: 100px;
-            list-style: none;
-            font-size: 24px;
-            color: var(--principal-color);
-            margin-left: 5px;
-            letter-spacing: 1.5px;
-            display: flex;
-            align-items: center;
-            padding-right: 6px;
-            border-radius: 36px 0 0 36px;
-            position: relative;
-        }
-        .header__nav-item2{
-            margin-right: 25px;
-        }
-        .flecha-nav{
-            color: #000;
-            user-select: none;
-        }
-        
-        .header__nav-item a{
-            text-decoration: none;
-            color: #000;
-        }
-        
-        .header__nav-item a:hover{
-            opacity: 0.7;
-        }
-        .logo_header{
-            user-select: none;    /*cambiar */
-        }
-        .header__open-nav-button{
-            display: none;
-        }
-        
-        .header__item-container{
-            position: relative;
-            z-index: 10; 
-            margin: auto;
-            margin-top: 120px;
-            text-align: center;
-            max-width: 700px;
-            z-index: 1;
-        
-        }
-        
-        .login{
-            list-style: none;
-            display: flex;
-        }
-        
-        .login a{
-            text-decoration: none;
-            color: #000;
-        }
-        
-        .login:hover{
-            opacity: .7;
-        }
-        .login2{
-            background-color: var(--principal-color);
-            font-size: 24px;
-            letter-spacing: 1.5px;
-            display: flex;
-            align-items: center;
-            padding: 40px;
-            margin-right: 20px;
-            margin-left: 40px;
-            width: 160px;
-            max-height: 10px;
-            border-radius: 90px;
-        }
-        /*CATEGORIAS DE LOS PRODUCTOS*/
-        .productos-navbar{
-            display: flex;
-            align-items: center;
-            padding-bottom: 20px;
-            padding-top: 20px;
-        }
-        .menu {
-            width: 300px;
-            justify-content: center;
-            margin: auto;
-            align-items: center;
-        }
-          
-        .menu ul{
-            list-style-type: none;
-            padding: 0;
-        }
-          
-        .menu ul ul {
-            display: none;
-        }
-          
-        .menu ul li {
-            position: relative;
-        }
-          
-        .menu ul li a {
-            display: block;
-            color: #333;
-        }
-          
-        .menu ul li:hover > ul {
-            display: block;
-            position: absolute;
-            background-color: var(--clarito-color);
-            border: 2px solid var(--principal-color);
-            border-radius: 5px;
-          }
-          
-        .menu ul ul li {
-            width: 100%;
-          }
-          
-        .menu ul ul li a {
-            padding: 8px 15px;
-          }
-          
-        .menu ul ul ul {
-            left: 100%;
-            top: 0;
-          }
-          
+    .header {
+        background-color: var(--clarito-color);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        container-type: inline-size;
+        container-name: header;
+        z-index: 10;
+        position: relative;
+        text-align: center;
+        font-size: 20px;
+        border-bottom: 1px solid var(--principal-color);
+        max-height: 110px;
+        user-select: none;
     }
-    
-    
-    /*EN CASO DE QUE LA PANTALLA SEA MENOR A 820PX SE APLICA ESTO*/
-    
-    
-    @media (max-width: 820px) { 
-    
-        
-        /* ---------- HEADER --------- */
-        
-        
-            .header{
-                background-color: var(--clarito-color);
-                display: flex;
-                align-items: center;
-                container-type: inline-size;
-                container-name: header;
-                position: relative;
-                z-index: 10;
-                text-align: center;
-                font-size: 20px;
-                border-bottom: 1px solid var(--principal-color);
-                max-height: 110px;
-                user-select: none;
-            }
-            
-            
-            .iconmenu-header{
-                width: 40px;
-                margin-top: 10px;
-            }
-            .header__nav{
-                width: 100%;
-            }
-            .header__nav-list{
-                display: flex;
-                flex-direction: row;
-                height: auto;
-                margin: auto;
-                justify-content: space-evenly;
-                gap: 20px;
-            }
-            .header__logo{
-                display: none;
-            }
-            .carrito-container{
-                border-radius: 50%;
-                display: flex;
-                align-items: center;
-            }
-            .carrito-container:hover{
-                opacity: .7;
-            }
-            .imagen-carrito{
-                width: 70px;
-                position: relative;
-                height: 40px;
-                cursor: pointer;
-            }
-            
-            .header__nav-item{
-                width: 100px;
-                list-style: none;
-                font-size: 19px;
-                margin-left: 15px;
-                color: var(--principal-color);
-                display: flex;
-                align-items: center;
-                border-radius: 36px 0 0 36px;
-                position: relative;
-            }
-            .flecha-nav{
-                color: #000;
-                user-select: none;
-            }
-            
-            .header__nav-item a{
-                text-decoration: none;
-                color: #000;
-            }
-            
-            .header__nav-item a:hover{
-                opacity: 0.7;
-            }
-            .logo_header{
-                user-select: none;    /*cambiar */
-            }
-            .header__open-nav-button{
-                display: none;
-            }
-            
-            .header__item-container{
-                position: relative;
-                z-index: 10; 
-                margin: auto;
-                margin-top: 120px;
-                text-align: center;
-                max-width: 700px;
-                z-index: 1;
-            
-            }
-            
-            .login{
-                list-style: none;
-                display: flex;
-            }
-            
-            .login a{
-                text-decoration: none;
-                color: #000;
-            }
-            
-            .login:hover{
-                opacity: .7;
-            }
-            .login2{
-                background-color: var(--principal-color);
-                font-size: 18px;
-                display: flex;
-                align-items: center;
-                padding: 15px 23px;
-                width: 100px;
-                margin: 10px 0;
-                border-radius: 90px;
-            }
-            /*CATEGORIAS DE LOS PRODUCTOS*/
-            .productos-navbar{
-                display: flex;
-                align-items: center;
-                padding-bottom: 20px;
-                padding-top: 20px;
-            }
-            .menu {
-                width: 100px;
-                justify-content: center;
-                margin: auto;
-                align-items: center;
-            }
-              
-            .menu ul{
-                list-style-type: none;
-                padding: 0;
-            }
-              
-            .menu ul ul {
-                display: none;
-            }
-              
-            .menu ul li {
-                position: relative;
-            }
-              
-            .menu ul li a {
-                display: block;
-                color: #333;
-            }
-              
-            .menu ul li:hover > ul {
-                display: block;
-                position: absolute;
-                background-color: var(--clarito-color);
-                border: 2px solid var(--principal-color);
-                border-radius: 5px;
-              }
-              
-            .menu ul ul li {
-                width: 100%;
-              }
-              
-            .menu ul ul li a {
-                padding: 8px 15px;
-              }
-              
-            .menu ul ul ul {
-                left: 100%;
-                top: 0;
-              }    
-        }
-h2{
+    .iconmenu-header {
+        width: 40px;
+        margin-top: 10px;
+    }
+    .header__nav-list {
+        display: flex;
+        flex-direction: row;
+        height: auto;
+        margin: auto;
+        justify-content: space-evenly;
+        gap: 20px;
+        margin-right: 40px;
+    }
+    .header__logo {
+        width: 150px;
+        margin-left: 30px;
+        margin-right: 35px;
+        position: relative;
+        height: 100px;
+    }
+    .carrito-container {
+        border-radius: 50%;
+    }
+    .carrito-container:hover {
+        opacity: .7;
+    }
+    .imagen-carrito {
+        width: 110px;
+        position: relative;
+        height: 60px;
+        cursor: pointer;
+    }
+    .header__nav-item {
+        width: 100px;
+        list-style: none;
+        font-size: 24px;
+        color: var(--principal-color);
+        margin-left: 5px;
+        letter-spacing: 1.5px;
+        display: flex;
+        align-items: center;
+        padding-right: 6px;
+        border-radius: 36px 0 0 36px;
+        position: relative;
+    }
+    .header__nav-item2 {
+        margin-right: 25px;
+    }
+    .flecha-nav {
+        color: #000;
+        user-select: none;
+    }
+    .header__nav-item a {
+        text-decoration: none;
+        color: #000;
+    }
+    .header__nav-item a:hover {
+        opacity: 0.7;
+    }
+    .logo_header {
+        user-select: none;
+        /*cambiar */
+    }
+    .header__open-nav-button {
+        display: none;
+    }
+    .header__item-container {
+        position: relative;
+        z-index: 10;
+        margin: auto;
+        margin-top: 120px;
+        text-align: center;
+        max-width: 700px;
+        z-index: 1;
+    }
+    .login {
+        list-style: none;
+        display: flex;
+    }
+    .login a {
+        text-decoration: none;
+        color: #000;
+    }
+    .login:hover {
+        opacity: .7;
+    }
+    .login2 {
+        background-color: var(--principal-color);
+        font-size: 24px;
+        letter-spacing: 1.5px;
+        display: flex;
+        align-items: center;
+        padding: 40px;
+        margin-right: 20px;
+        margin-left: 40px;
+        width: 160px;
+        max-height: 10px;
+        border-radius: 90px;
+    }
+    /*CATEGORIAS DE LOS PRODUCTOS*/
+    .productos-navbar {
+        display: flex;
+        align-items: center;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+    .menu {
+        width: 300px;
+        justify-content: center;
+        margin: auto;
+        align-items: center;
+    }
+    .menu ul {
+        list-style-type: none;
+        padding: 0;
+    }
+    .menu ul ul {
+        display: none;
+    }
+    .menu ul li {
+        position: relative;
+    }
+    .menu ul li a {
+        display: block;
+        color: #333;
+    }
+    .menu ul li:hover>ul {
+        display: block;
+        position: absolute;
+        background-color: var(--clarito-color);
+        border: 2px solid var(--principal-color);
+        border-radius: 5px;
+    }
+    .menu ul ul li {
+        width: 100%;
+    }
+    .menu ul ul li a {
+        padding: 8px 15px;
+    }
+    .menu ul ul ul {
+        left: 100%;
+        top: 0;
+    }
+}
+
+
+/*EN CASO DE QUE LA PANTALLA SEA MENOR A 820PX SE APLICA ESTO*/
+
+@media (max-width: 820px) {
+    /* ---------- HEADER --------- */
+    .header {
+        background-color: var(--clarito-color);
+        display: flex;
+        align-items: center;
+        container-type: inline-size;
+        container-name: header;
+        position: relative;
+        z-index: 10;
+        text-align: center;
+        font-size: 20px;
+        border-bottom: 1px solid var(--principal-color);
+        max-height: 110px;
+        user-select: none;
+    }
+    .iconmenu-header {
+        width: 40px;
+        margin-top: 10px;
+    }
+    .header__nav {
+        width: 100%;
+    }
+    .header__nav-list {
+        display: flex;
+        flex-direction: row;
+        height: auto;
+        margin: auto;
+        justify-content: space-evenly;
+        gap: 20px;
+    }
+    .header__logo {
+        display: none;
+    }
+    .carrito-container {
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+    }
+    .carrito-container:hover {
+        opacity: .7;
+    }
+    .imagen-carrito {
+        width: 70px;
+        position: relative;
+        height: 40px;
+        cursor: pointer;
+    }
+    .header__nav-item {
+        width: 100px;
+        list-style: none;
+        font-size: 19px;
+        margin-left: 15px;
+        color: var(--principal-color);
+        display: flex;
+        align-items: center;
+        border-radius: 36px 0 0 36px;
+        position: relative;
+    }
+    .flecha-nav {
+        color: #000;
+        user-select: none;
+    }
+    .header__nav-item a {
+        text-decoration: none;
+        color: #000;
+    }
+    .header__nav-item a:hover {
+        opacity: 0.7;
+    }
+    .logo_header {
+        user-select: none;
+        /*cambiar */
+    }
+    .header__open-nav-button {
+        display: none;
+    }
+    .header__item-container {
+        position: relative;
+        z-index: 10;
+        margin: auto;
+        margin-top: 120px;
+        text-align: center;
+        max-width: 700px;
+        z-index: 1;
+    }
+    .login {
+        list-style: none;
+        display: flex;
+    }
+    .login a {
+        text-decoration: none;
+        color: #000;
+    }
+    .login:hover {
+        opacity: .7;
+    }
+    .login2 {
+        background-color: var(--principal-color);
+        font-size: 18px;
+        display: flex;
+        align-items: center;
+        padding: 15px 23px;
+        width: 100px;
+        margin: 10px 0;
+        border-radius: 90px;
+    }
+    /*CATEGORIAS DE LOS PRODUCTOS*/
+    .productos-navbar {
+        display: flex;
+        align-items: center;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+    .menu {
+        width: 100px;
+        justify-content: center;
+        margin: auto;
+        align-items: center;
+    }
+    .menu ul {
+        list-style-type: none;
+        padding: 0;
+    }
+    .menu ul ul {
+        display: none;
+    }
+    .menu ul li {
+        position: relative;
+    }
+    .menu ul li a {
+        display: block;
+        color: #333;
+    }
+    .menu ul li:hover>ul {
+        display: block;
+        position: absolute;
+        background-color: var(--clarito-color);
+        border: 2px solid var(--principal-color);
+        border-radius: 5px;
+    }
+    .menu ul ul li {
+        width: 100%;
+    }
+    .menu ul ul li a {
+        padding: 8px 15px;
+    }
+    .menu ul ul ul {
+        left: 100%;
+        top: 0;
+    }
+}
+
+h2 {
     font-size: 1.9rem;
     text-align: center;
     padding-bottom: 40px;
     margin-bottom: 50px;
     border-bottom: 1px solid var(--principal-color);
 }
-form{
+
+form {
     max-width: 600px;
     justify-content: center;
     align-items: center;
@@ -397,12 +365,14 @@ form{
     border-radius: 10px;
     border: 1px solid var(--principal-color);
 }
-label{
+
+label {
     margin: 20px;
     display: flex;
     font-size: 1.3rem;
 }
-input{
+
+input {
     width: 100%;
     padding: 10px;
     border-radius: 15px;
@@ -412,7 +382,7 @@ input{
     justify-content: center;
 }
 
-input[type="submit"]{
+input[type="submit"] {
     width: 50%;
     justify-content: center;
     align-items: center;
@@ -421,12 +391,10 @@ input[type="submit"]{
     padding: 15px 20px;
     cursor: pointer;
 }
-input[type="submit"]:hover{
+
+input[type="submit"]:hover {
     opacity: .7;
 }
-
-
-
 
 
 /* FOOTER */
@@ -440,18 +408,28 @@ footer {
     width: 100%;
     background-color: var(--principal-color);
     text-align: center;
+    justify-content: center;
+    align-items: center;
     padding: 18px 0;
     font-size: 17px;
     box-shadow: 0 5px 10px rgba(0, 2, 96, 0.2);
     margin: 0;
     user-select: none;
+    display: flex;
 }
 
 .footer-title-lit {
     margin: 0;
+    padding: 0;
 }
 
-.footer-text{
+.copy {
+    margin: 0;
+    padding: 0 4px;
+    font-weight: bold;
+}
+
+.footer-text {
     margin: 0;
 }
 
@@ -460,6 +438,7 @@ footer {
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     user-select: none;
+    border-right: 1px solid var(--principal-color);
 }
 
 .footer-text {
@@ -475,19 +454,20 @@ footer {
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     user-select: none;
+    border-right: 1px solid var(--principal-color);
 }
 
-.footer-cont2 a img{
+.footer-cont2 a img {
     width: 40px;
     margin: 20px 15px;
     transition: transform 0.3s;
 }
-.footer-cont2 a img:hover{
+
+.footer-cont2 a img:hover {
     transform: scale(1.1);
     opacity: .7;
 }
 
 .contenido-footer {
     display: flex;
-    margin-top: 10px;
 }
