--- a/FrontEND/Page/Login/login.css
+++ b/FrontEND/Page/Login/login.css
@@ -371,6 +371,7 @@ main {
     box-shadow: 0 0 15px black;
     border: 2px solid rgb(4, 26, 53);
     min-height: 600px;
+    user-select: none;
 }
 
 .todo-formulario {
@@ -549,15 +550,25 @@ footer {
     width: 100%;
     background-color: var(--principal-color);
     text-align: center;
+    justify-content: center;
+    align-items: center;
     padding: 18px 0;
     font-size: 17px;
     box-shadow: 0 5px 10px rgba(0, 2, 96, 0.2);
     margin: 0;
     user-select: none;
+    display: flex;
 }
 
 .footer-title-lit {
     margin: 0;
+    padding: 0;
+}
+
+.copy {
+    margin: 0;
+    padding: 0 4px;
+    font-weight: bold;
 }
 
 .footer-text {
@@ -599,5 +610,4 @@ footer {
 
 .contenido-footer {
     display: flex;
-    margin-top: 10px;
 }
