--- a/FrontEND/Page/Administrador/Agregar.css
+++ b/FrontEND/Page/Administrador/Agregar.css
@@ -397,16 +397,19 @@ input[type="submit"]:hover {
 }
 
 
+
 /* FOOTER */
 
 footer {
     width: 100%;
-    background-color: var(--clarito-color);
+    background-color: #979292;
+    min-height: 170px;
 }
 
 .footer-title {
     width: 100%;
-    background-color: var(--principal-color);
+    height: 40px;
+    background-color: #b8b0b0;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -416,6 +419,16 @@ footer {
     margin: 0;
     user-select: none;
     display: flex;
+}
+
+h4 {
+    display: flex;
+    font-size: 14px;
+    border-bottom: 1px solid black;
+    padding: 7px;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
 
 .footer-title-lit {
@@ -435,10 +448,9 @@ footer {
 
 .footer-cont {
     width: 50%;
-    text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     user-select: none;
-    border-right: 1px solid var(--principal-color);
+    margin: 0 40px;
 }
 
 .footer-text {
@@ -446,7 +458,8 @@ footer {
 }
 
 .parrafo {
-    margin-top: 20px;
+    font-size: 14px;
+    margin: 10px;
 }
 
 .footer-cont2 {
@@ -454,12 +467,12 @@ footer {
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     user-select: none;
-    border-right: 1px solid var(--principal-color);
+    margin: 0 40px;
 }
 
 .footer-cont2 a img {
     width: 40px;
-    margin: 20px 15px;
+    margin: 10px 15px 0 15px;
     transition: transform 0.3s;
 }
 
@@ -470,4 +483,33 @@ footer {
 
 .contenido-footer {
     display: flex;
+}
+
+
+@media (max-width: 680px) {
+    
+.contenido-footer {
+    display: block;
+}
+.footer-cont {
+    width: 100%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    user-select: none;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.footer-cont2 {
+    width: 100%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    user-select: none;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+
 }
