--- a/FrontEND/Page/Register/register.css
+++ b/FrontEND/Page/Register/register.css
@@ -31,7 +31,7 @@ main {
 }
 
 
-/*hacer la pagina responsive*/
+/*hacer EL HEADER responsive*/
 
 @media (min-width: 820px) {
     /*EN CASO DE QUE LA PANTALLA SEA MAYOR A 980PX SE APLICA ESTO*/
@@ -62,7 +62,7 @@ main {
         margin: auto;
         justify-content: space-evenly;
         gap: 20px;
-        margin-right: 40px;
+        margin-right: 100px;
     }
     .header__logo {
         width: 150px;
@@ -112,7 +112,6 @@ main {
     }
     .logo_header {
         user-select: none;
-        /*cambiar */
     }
     .header__open-nav-button {
         display: none;
@@ -126,86 +125,67 @@ main {
         max-width: 700px;
         z-index: 1;
     }
-    .login {
-        list-style: none;
-        display: flex;
-        margin: 0;
-        padding: 0;
+    /* BOTON DE USER */
+    .user {
+        user-select: none;
+        width: 45px;
     }
-    .login a {
+    .user:hover {
+        opacity: .7;
+    }
+    .login-boton {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        width: 100%;
+    }
+    .menu-desplegable {
+        display: none;
+    }
+    .login-link {
+        cursor: pointer;
+        background-color: var(--principal-color);
+        padding: 3px;
+        border-radius: 15px;
+        box-shadow: 0 0 5px black;
+        max-width: 55px;
+        height: 55px;
+    }
+    .menuUser {
+        overflow: hidden;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        background-color: #e4f7ff;
+        border: 1px solid var(--principal-color);
+        border-radius: 10px;
+        transition: max-height .7s ease-out;
+        box-shadow: 0 0 14px rgba(0, 0, 0, 0.2);
+        max-height: 0;
+        font-size: 23px;
+    }
+    .menuUser a {
+        display: block;
+        padding: 13px;
         text-decoration: none;
         color: #000;
-        justify-content: center;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
-    .login2 {
-        font-size: 24px;
-        width: 140px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: hand;
-        text-transform: capitalize;
-        border: 1px solid #73a6ff;
-        border-radius: 20px;
-        padding: 0px 25px;
-        position: relative;
-        overflow: hidden!important;
-        -webkit-transition: all .3s ease-in-out;
-        -moz-transition: all .3s ease-in-out;
-        -o-transition: all .3s ease-in-out;
-        transition: all .3s ease-in-out;
-        background: rgb(126, 171, 249);
-        z-index:10;
-        box-shadow: 0 0 15px 1px black;
+    .menuUser a:hover {
+        opacity: .7;
+        background-color: #afafaf;
     }
-    .login2:hover{
-        border: 1px solid #8493e3;
-        color: black;
-        
+    .menu-desplegable:checked+.login-link+.menuUser {
+        max-height: none;
+        /* Permitir altura automática */
+        height: auto;
+        /* Asegurar altura según el contenido */
+        width: 300px;
     }
-    .login2::before {
-        content: '';
-        width: 0%;
-        height: 100%;
-        display: block;
-        background: #35b7eb;
-        position: absolute;
-        -ms-transform: skewX(-20deg);
-        -webkit-transform: skewX(-20deg); 
-        transform: skewX(-20deg);   
-        left: -10%;
-        top: 0;
-        z-index: -12;
-        -moz-transition: all .7s cubic-bezier(0.77, 0, 0.175, 1);
-      -o-transition: all .7s cubic-bezier(0.77, 0, 0.175, 1);
-      -webkit-transition: all .7s cubic-bezier(0.77, 0, 0.175, 1);
-      transition: all .7s cubic-bezier(0.77, 0, 0.175, 1);
-         box-shadow:2px 0px 14px rgba(0,0,0,.6);
-      }
-    .login2::after {
-        content: '';
-        width: 0%;
-        height: 100%;
-        display: block;
-        background: #6fb7f9;
-        position: absolute;
-      -ms-transform: skewX(-20deg);
-        -webkit-transform: skewX(-20deg); 
-        transform: skewX(-20deg);   
-        left: -10%;
-        top: 0;
-        z-index: -15;
-        -webkit-transition: all .94s cubic-bezier(.2,.95,.57,.99);
-        -moz-transition: all .4s cubic-bezier(.2,.95,.57,.99);
-        -o-transition: all .4s cubic-bezier(.2,.95,.57,.99);
-        transition: all .4s cubic-bezier(.2,.95,.57,.99);
-        box-shadow: 2px 0px 14px rgba(0,0,0,.6);
-    }
-    .login2:hover::before, .login2:hover::before{
-      width: 116%;
-    }
-    .login2:hover::after, .login2:hover::after{
-      width: 120%;
+    .menu-desplegable:not(:checked)+.login-link+.menuUser {
+        transition: none;
+        border: none;
     }
     /*CATEGORIAS DE LOS PRODUCTOS*/
     .productos-navbar {
@@ -277,7 +257,8 @@ main {
         margin-top: 10px;
     }
     .header__nav {
-        width: 100%;
+        width: 70%;
+        margin: auto;
     }
     .header__nav-list {
         display: flex;
@@ -342,28 +323,67 @@ main {
         max-width: 700px;
         z-index: 1;
     }
-    .login {
-        list-style: none;
-        display: flex;
-        margin-right: 6px;
+    /* BOTON DE USER */
+    .user {
+        user-select: none;
+        width: 45px;
     }
-    .login a {
-        text-decoration: none;
-        color: #000;
-        justify-content: center;
-    }
-    .login:hover {
+    .user:hover {
         opacity: .7;
     }
-    .login2 {
-        background-color: var(--principal-color);
-        font-size: 18px;
+    .login-boton {
+        position: relative;
         display: flex;
         align-items: center;
-        padding: 15px 23px;
-        width: 100px;
-        margin: 10px 0;
-        border-radius: 90px;
+        justify-content: end;
+        width: 100%;
+    }
+    .menu-desplegable {
+        display: none;
+    }
+    .login-link {
+        cursor: pointer;
+        background-color: var(--principal-color);
+        padding: 3px;
+        border-radius: 15px;
+        box-shadow: 0 0 5px black;
+        max-width: 55px;
+        height: 55px;
+    }
+    .menuUser {
+        overflow: hidden;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        background-color: #e4f7ff;
+        border: 1px solid var(--principal-color);
+        border-radius: 10px;
+        transition: max-height .7s ease-out;
+        box-shadow: 0 0 14px rgba(0, 0, 0, 0.2);
+        max-height: 0;
+        font-size: 23px;
+    }
+    .menuUser a {
+        display: block;
+        padding: 13px;
+        text-decoration: none;
+        color: #000;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+    .menuUser a:hover {
+        opacity: .7;
+        background-color: #afafaf;
+    }
+    .menu-desplegable:checked+.login-link+.menuUser {
+        max-height: none;
+        /* Permitir altura automática */
+        height: auto;
+        /* Asegurar altura según el contenido */
+        width: 300px;
+    }
+    .menu-desplegable:not(:checked)+.login-link+.menuUser {
+        transition: none;
+        border: none;
     }
     /*CATEGORIAS DE LOS PRODUCTOS*/
     .productos-navbar {
@@ -427,6 +447,12 @@ main {
     border: 2px solid rgb(4, 26, 53);
     min-height: 730px;
     user-select: none;
+}
+
+@media (max-width: 820px) {
+    .div-container {
+        width: 90%;
+    }
 }
 
 .container {
@@ -582,8 +608,7 @@ input {
     border: none;
 }
 
-
-.ojitoContra{
+.ojitoContra {
     position: absolute;
     width: 30px;
     cursor: pointer;
@@ -591,7 +616,6 @@ input {
     right: 5px;
     box-sizing: border-box;
 }
-
 
 
 /* FOOTER */
@@ -681,31 +705,27 @@ h4 {
     display: flex;
 }
 
-
 @media (max-width: 680px) {
-    
-.contenido-footer {
-    display: block;
-}
-.footer-cont {
-    width: 100%;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    user-select: none;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-.footer-cont2 {
-    width: 100%;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    user-select: none;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-
+    .contenido-footer {
+        display: block;
+    }
+    .footer-cont {
+        width: 100%;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        user-select: none;
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .footer-cont2 {
+        width: 100%;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        user-select: none;
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 10px;
+    }
 }
