--- a/FrontEND/Page/Administrador/Agregar.css
+++ b/FrontEND/Page/Administrador/Agregar.css
@@ -8,9 +8,14 @@ body {
   font-family: sans-serif;
   box-sizing: border-box;
   --principal-color: #0b8dea;
+  --principalLogo-color: #0b8dea;
   --clarito-color: #b2d0e6;
   height: 100dvh;
   background-image: linear-gradient(90deg, white, rgb(186, 236, 241));
+}
+
+.admin-body {
+  --principalLogo-color: #f14141;
 }
 
 div,
@@ -124,7 +129,13 @@ main {
     max-width: 700px;
     z-index: 1;
   }
+
+
+
   /* BOTON DE USER */
+
+
+  
   .user {
     user-select: none;
     width: 45px;
@@ -144,7 +155,7 @@ main {
   }
   .login-link {
     cursor: pointer;
-    background-color: var(--principal-color);
+    background-color: var(--principalLogo-color);
     padding: 3px;
     border-radius: 15px;
     box-shadow: 0 0 5px black;
@@ -208,16 +219,16 @@ main {
     width: 90%;
     font-size: 15px;
   }
-  .AgregarAdmin {
+  .AgregarAdmin{
     border-bottom: 1px solid black;
   }
-  .AgregarAdmin:hover {
+  .AgregarAdmin:hover{
     background-color: rgb(204, 252, 204);
   }
-  .EliminarAdmin2 {
+  .EliminarAdmin2{
     border-bottom: 1px solid black;
   }
-  .EliminarAdmin2:hover {
+  .EliminarAdmin2:hover{
     background-color: rgb(255, 198, 198);
   }
   .etiqueta {
@@ -233,6 +244,7 @@ main {
   }
 
   /*CATEGORIAS DE LOS PRODUCTOS*/
+
 
   .productos-navbar {
     display: flex;
@@ -267,7 +279,7 @@ main {
     border: 2px solid var(--principal-color);
     border-radius: 5px;
   }
-  .lista-productos:hover {
+  .lista-productos:hover{
     background-color: #d3d6ff;
   }
   .menu ul ul li {
@@ -434,16 +446,16 @@ main {
     border: none;
   }
 
-  .AgregarAdmin {
+  .AgregarAdmin{
     border-bottom: 1px solid black;
   }
-  .AgregarAdmin:hover {
+  .AgregarAdmin:hover{
     background-color: rgb(204, 252, 204);
   }
-  .EliminarAdmin2 {
+  .EliminarAdmin2{
     border-bottom: 1px solid black;
   }
-  .EliminarAdmin2:hover {
+  .EliminarAdmin2:hover{
     background-color: rgb(255, 198, 198);
   }
 
@@ -495,6 +507,13 @@ main {
     min-height: calc(100% - 120px - 80px);
   }
 }
+
+
+/*  // header   */
+
+
+/* AGREGAR PRODUCTOS */
+
 
 h2 {
   font-size: 1.9rem;
