--- a/FrontEND/Page/Productos/Productos.css
+++ b/FrontEND/Page/Productos/Productos.css
@@ -8,9 +8,14 @@ body {
   font-family: sans-serif;
   box-sizing: border-box;
   --principal-color: #0b8dea;
+  --principalLogo-color: #0b8dea;
   --clarito-color: #b2d0e6;
   height: 100dvh;
   background-image: linear-gradient(90deg, white, rgb(186, 236, 241));
+}
+
+.admin-body {
+  --principalLogo-color: #f14141;
 }
 
 div,
@@ -70,7 +75,18 @@ main {
     position: relative;
     height: 100px;
   }
-
+  .carrito-container {
+    border-radius: 50%;
+  }
+  .carrito-container:hover {
+    opacity: 0.7;
+  }
+  .imagen-carrito {
+    width: 110px;
+    position: relative;
+    height: 60px;
+    cursor: pointer;
+  }
   .header__nav-item {
     width: 100px;
     list-style: none;
@@ -113,7 +129,13 @@ main {
     max-width: 700px;
     z-index: 1;
   }
+
+
+
   /* BOTON DE USER */
+
+
+  
   .user {
     user-select: none;
     width: 45px;
@@ -133,7 +155,7 @@ main {
   }
   .login-link {
     cursor: pointer;
-    background-color: var(--principal-color);
+    background-color: var(--principalLogo-color);
     padding: 3px;
     border-radius: 15px;
     box-shadow: 0 0 5px black;
@@ -487,6 +509,147 @@ main {
 }
 
 
+/* INICIO */
+
+
+.titulo {
+  display: flex;
+  width: 100%;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+}
+
+.titulo img {
+  margin: 60px 0;
+}
+
+h1 {
+  margin-top: 80px;
+  text-align: center;
+  position: relative;
+  bottom: 40px;
+}
+
+.h1 {
+  position: absolute;
+}
+
+.productos-destacados {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.contenedor-productos {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.producto {
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 20px;
+  background-color: #96cdf5;
+}
+
+.producto img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.producto h3 {
+  margin: 10px 0;
+  font-size: 1.2em;
+}
+
+.producto p {
+  font-size: 1.1em;
+  color: #333;
+  margin-bottom: 15px;
+}
+
+.producto button {
+  background-color: #61cde0;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+button.boton-Detalle {
+  flex-direction: column;
+  padding: 10px 20px;
+}
+/*ANUNCION*/
+
+.anuncio {
+  width: 90%;
+  height: 300px;
+  background-color: rgb(158, 210, 252);
+  margin: auto;
+  display: flex;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 1px black;
+  margin-top: 240px;
+  background-image: linear-gradient(
+    90deg,
+    rgb(118, 163, 245),
+    rgb(203, 226, 243)
+  );
+  user-select: none;
+}
+
+/* ANUNCIO RESPONSIVE*/
+
+@media (min-width: 1220px) {
+  .anuncio {
+    width: 60%;
+  }
+}
+@media (max-width: 868px) {
+  .anuncio {
+    width: 60%;
+    height: 600px;
+    display: block;
+  }
+  .anuncio p {
+    font-size: 35px;
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .cuadrante1{
+    width: 100%;
+  }
+  .cuadrante2 .img1 {
+    max-width: 160px;
+    margin: 0;
+    padding: 0;
+  }
+  .cuadrante2 .img2 {
+    max-width: 120px;
+    max-height: 110px;
+    margin: auto 0;
+    padding: 0;
+  }
+  .cuadrante3 img {
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+}
+
 /* PAGINA PRODUCTOS */
 
 
@@ -525,6 +688,8 @@ h2{
 }
 h3{
   margin-left: 10px;
+  max-width: 30px;
+  height: 50px;
 }
 .productos-categoria{
   display: flex;
@@ -537,7 +702,9 @@ h3{
   margin: 0 20px;
   padding: 15px;
   border: 1px solid black;
-  max-height: 290px;
+  max-height: 310px;
+  background-color: #d3d3d3;
+  border-radius: 8px;
 }
 .parrafo-y-img{
   display: flex;
@@ -554,7 +721,6 @@ h3{
 .img-producto{
   height: 120px;
   width: 120px;
-  transition: all .3s;
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
   border-radius: 15px;
@@ -566,8 +732,8 @@ h3{
 }
 .producto-item:hover .P-producto{
   display: block;
-  min-width: 110px;
-  transition: all .3s; /* NOSE PORQUE NO ANDA LPM*/
+  width: 130px;
+  transition: all .3s; /* NOSE PORQUE NO ANDA :( */
 }
 .botonAgregarCarrito{
   width: 100%;
@@ -656,6 +822,7 @@ footer {
     width: 100%;
     background-color: #979292;
     min-height: 170px;
+    margin-top: 170px;
 }
 
 .footer-title {
