--- a/FrontEND/Page/Administrador/AgregarProducto.css
+++ b/FrontEND/Page/Administrador/AgregarProducto.css
@@ -195,9 +195,7 @@ main {
     }
     .menu-desplegable:checked+.login-link+.menuUser {
         max-height: none;
-        /* Permitir altura automática */
         height: auto;
-        /* Asegurar altura según el contenido */
         width: 300px;
     }
     .menu-desplegable:not(:checked)+.login-link+.menuUser {
@@ -212,6 +210,12 @@ main {
         margin: 10px auto;
         width: 90%;
         font-size: 15px;
+    }
+    .OfertaAdmin {
+        border-bottom: 1px solid black;
+    }
+    .OfertaAdmin:hover {
+        background-color: rgb(255, 248, 198);
     }
     .AgregarAdmin {
         border-bottom: 1px solid black;
@@ -228,17 +232,16 @@ main {
     .etiqueta {
         display: block;
         font-size: 15px;
-        /* Tamaño de fuente para la etiqueta */
         margin-bottom: 4px;
     }
     .span {
         display: block;
         font-size: 18px;
-        /* Tamaño de fuente para el valor */
         font-weight: bold;
-        /* Opcional: para que el valor sea más destacado */
     }
+
     /*CATEGORIAS DE LOS PRODUCTOS*/
+
     .productos-navbar {
         display: flex;
         align-items: center;
@@ -501,7 +504,8 @@ main {
 }
 
 
-/*  // header   */
+/* // header */
+
 
 
 /* AGREGAR PRODUCTOS */
@@ -581,6 +585,75 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     opacity: 0.7;
+}
+
+
+
+/*alerta personalizada :)*/
+
+
+#fondoOscuro {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1000;
+}
+
+#alertaPersonalizada {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(206, 224, 255);
+    width: 700px;
+    border: 2px solid black;
+    border-radius: 15px;
+    box-shadow: 0px 0px 799999px 90px black;
+    z-index: 1000;
+}
+
+.p-alerta1 {
+    text-align: center;
+    font-size: 19px;
+    padding-top: 50px;
+}
+
+.p-alerta2 {
+    text-align: center;
+    font-size: 19px;
+    padding-top: 17px;
+}
+
+.botonyalerta {
+    height: 100%;
+}
+
+.boton-alerta {
+    display: flex;
+    height: 100%;
+    margin: 0 auto;
+    justify-content: end;
+    align-items: end;
+}
+
+#alertaPersonalizada button {
+    display: flex;
+    margin: 40px auto;
+    padding: 10px 50px;
+    border-radius: 10px;
+    border: 1px solid var(--secundario-color);
+    background-color: var(--principal-color);
+    box-shadow: 0 0 10px 1px black;
+    cursor: pointer;
+}
+
+#alertaPersonalizada button:hover {
+    opacity: .7;
 }
 
 
